--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -1,89 +1,52 @@
-* {
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-}
-
 body {
-	background: rgba(20, 20, 140, 0.6);
-	opacity: 100%;
+	padding: 0;
+	margin: 0;
+	background: #000;
 }
 
-.wrapper {
-	width: 50vw;
-	margin: 0 auto;
+header {
+	height: 9vh;
+	text-align: center;
+	color: yellow;
+	margin-top: 2rem;
+	font-family: "Press Start 2P", system-ui;
+}
+
+
+main {
+	height: 80vh;
 	display: flex;
+	justify-content: center;
 	align-items: center;
-	flex-direction: column;
-	padding: 20px 0;
 }
 
-.slideRules {
-	width: 50vw;
-	background: blue;
-	padding: 10px 20px;
-	border-top-right-radius: 10px;
-	border-top-left-radius: 10px;
-	color: #fff;
-	font-size: 30px;
-	font-weight: 900px;
-}
-
-#rules {
-	background: green;
-	padding: 10px 20px;
-	font-size: 18px;
-	border-bottom-right-radius: 10px;
-	border-bottom-left-radius: 10px;
-	color: #fff;
-}
-
-a {
+#start {
 	text-decoration: none;
-	color: #fff;
-	margin-top: 20px;
+	color: orange;
+	font-size: 3rem;
+	text-shadow:  0 0 0 #fff;
+	transition: all ease-in-out 0.5s;
+	font-family: "Press Start 2P", system-ui;
+	animation: rainbow 4s infinite ease-in-out;
 }
 
-#nextTask {
-	background: red;
-	padding: 10px;
-	font-size: 25px;
-	border-radius: 10px;
-	display: none;
+#start:hover {
+	text-shadow: 0.2rem 0.2rem 0 #fff;
+	transform: scale(1.2);
 }
 
-.answer {
-	margin-top: 20px;
-}
-
-.taskProgres, .timeProgres {
-	position: fixed;
-	left: 125vh;
-	top: 30vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.timeProgres {
-	left: 60vh;
-}
-
-.sound {
-	margin-top: 12rem;
-}
-
-.start {
-	background: #abe759;
-	padding: 20px 40px;
-	font-size: 25px;
-	font-family: sans-serif;
-	color: #fff;
-	margin: 40px 0;
-	cursor: pointer;
-	border-radius: 12%;
-}
-
-.taskProgres, .timeProgres, .sound, .answer {
-	display: none;
+@keyframes rainbow {
+	0%, 100% {
+		color: pink;
+	}
+	25% {
+		color: purple;
+	}
+	50% {
+		color: red;
+		transform: scale(1.1);
+	}
+	75% {
+		color: orange;
+	}
 }
